--- a/report/report.tex
+++ b/report/report.tex
@@ -13,7 +13,7 @@
                   /OpenAction (fitbh)  }
 \fi
 
-\title{Poetic Precision}
+\title{The Poetry Pioneer}
 
 \ifpdf
   \author{\href{mailto:nbn10@doc.ic.ac.uk}{Nitin Nihalani}}
