--- a/report/report.tex
+++ b/report/report.tex
@@ -60,6 +60,11 @@
 \usepackage{algpseudocode}
 \usepackage{algorithm}
 \usepackage{color}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+\usetikzlibrary{trees}
 \lstset{frame=tb,
   language=Python,
   aboveskip=3mm,
